Get rowspan and colspan working in feature system report. Improve header of report.